--- a/bin/Aggregator/requirements.txt
+++ b/bin/Aggregator/requirements.txt
@@ -4,7 +4,7 @@ backports.functools-lru-cache==1.5
 cffi==1.11.5
 configparser==3.5.0
 coverage==4.5.1
-cryptography==2.2.2
+cryptography>2.3
 cx-Oracle==6.3.1
 enum34==1.1.6
 futures==3.2.0
