--- a/bin/SConfigParser/requirements.txt
+++ b/bin/SConfigParser/requirements.txt
@@ -1,7 +1,7 @@
 asn1crypto==0.24.0
 cffi==1.11.5
 configparser==3.5.0
-cryptography==2.2.2
+cryptography>2.3
 enum34==1.1.6
 idna==2.7
 ipaddress==1.0.22
